config/__others/monitoring-loadbalancer.yaml
# LoadBalancer Service for prometheus.microsvc.net
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
    cloud.google.com/load-balancer-type: "External"
  labels:
    app: prometheus
spec:
  type: LoadBalancer
  loadBalancerIP: 34.67.114.249 # Reserved IP for prometheus.microsvc.net
  selector:
    prometheus: prometheus-kube-prometheus-prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090

---

# LoadBalancer Service for grafana.microsvc.net
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
  annotations:
    cloud.google.com/load-balancer-type: "External"
  labels:
    app: grafana
spec:
  type: LoadBalancer
  loadBalancerIP: 35.202.248.162 # Reserved IP for grafana.microsvc.net
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 # Grafana default port
